embed roles in user openapi
