# socialapp/socialappapi/openapi/model_role.go
@@ -22,6 +22,8 @@ type Role struct {
 	Description string `json:"description,omitempty"`
 
 	CreatedAt time.Time `json:"created_at,omitempty"`
+
+	Scopes []Scope `json:"scopes,omitempty"`
 }
 
 // AssertRoleRequired checks if the required fields are not zero-ed
@@ -35,6 +37,11 @@ func AssertRoleRequired(obj Role) error {
 		}
 	}
 
+	for _, el := range obj.Scopes {
+		if err := AssertScopeRequired(el); err != nil {
+			return err
+		}
+	}
 	return nil
 }
 
